# RKLLM_Translator

./: LICENSE  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/rockchip/llm/translator/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llm.cpp
app/src/main/java/com/rockchip/llm/translator/: LLmTranslator.kt  MainActivity.kt  RKLLm.kt
app/src/main/java/com/rockchip/llm/translator/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/rockchip/llm/translator/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
